Fixed overflow on Connection Profile List. Fixed scrolling on Connection Profile List.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@
 // @Date:   2017-03-07T17:09:22+11:00
 // @Last modified by:   chris
 // @Last modified time: 2017-05-15T10:26:28+10:00
-
+@import '../styles/_defaultTheme.scss';
 $purpleFont: #b95cce;
 $resizerHoverColor: rgba(97, 114, 126, 0.7);
 
@@ -62,6 +62,10 @@ Resizer.disabled:hover {
 
 .optInBoldDBEnvy {
   color: $purpleFont !important;
+}
+
+.horizontal.Pane2 {
+  background-color: $panelLeftBackground;
 }
 
 .DevTools > div > div:first-child > div {
